# rs-control

./: .gitignore  Cargo.toml
main/: Cargo.toml
main/src/: ca.rs  logger.rs  main.rs  web_server.rs
main_client/: Cargo.toml
main_sever/: Cargo.toml
main_sever/src/: ca.rs  logger.rs  main.rs
