[workspace]

members = [
    "main_sever",
    "main_client"
]

[workspace.dependencies]
futures-core = "0.3.24"
futures-util = "0.3.24"
futures-channel = "0.3.24"
futures-sink = "0.3.24"
futures-task = "0.3.24"

tokio = "1.21.2"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.16"
hyper = "0.14.20"
axum = "0.6.0-rc.2"
axum-server = "0.4.2"
openssl = "0.10.42"
yew = "0.19.3"
