[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
hyper = { workspace = true, features = ["full"] }
axum = { workspace = true }
axum-server = { workspace = true, features = ["tls-rustls"] }
openssl = { workspace = true }
